--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 # You must first activate a Billing Account here: https://platform.openai.com/account/billing/overview
 # Then get your OpenAI API Key here: https://platform.openai.com/account/api-keys
-OPENAI_API_KEY=XXXXXXXX
+OPENAI_API_KEY=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
 
 # Generate a random secret: https://generate-secret.vercel.app/32 or `openssl rand -base64 32`
-AUTH_SECRET=XXXXXXXX
+AUTH_SECRET=b4ef35f01449d54df975f4b8367f08d5
 
 # Instructions to create kv database here: https://vercel.com/docs/storage/vercel-kv/quickstart and 
 KV_URL=XXXXXXXX
